# TestTask2

./: CMakeLists.txt  README.md
Lib/: CMakeLists.txt
Lib/include/: Point.h  Tools.h  Vector.h  stdafx.h
Lib/src/: Point.cpp  Tools.cpp  Vector.cpp
SolutionTest2/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  main.cpp
